--- a/apitest/WebContent/css/headerfooter1.css
+++ b/apitest/WebContent/css/headerfooter1.css
@@ -1,3 +1,5 @@
+<link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css" /> 
+
    a{
    text-decoration: none;
    }
