--- a/apitest/WebContent/css/headerfooter2.css
+++ b/apitest/WebContent/css/headerfooter2.css
@@ -1,143 +1,173 @@
-  
-   .header, .footer { 
-      z-index: 250;
-   }
-
-
-   i{
-      color: #0098ff;
-      font-size: 35px;
-      z-index: 250;
-   }
-
-
-   
- /* header_css */
-   .header {
-    background-color: white;
-    width:393px; height:100px;
-    position: absolute;
-    z-index: 200;
-    box-shadow: 0px 2px 4px lightgray; 
-      
-   }
-   .headergroup {
-	position: relative;
-	width:393px; height:50px;
-	top: 50px;
-   }
-   
-   .menu{
-    display:inline-block;
-    margin-left: 20px;
-    text-align:center;
-    width: 40px;
-    height: 40px;
-   }
-   .bi-list { 
-   }
-   .title{
-      position:absolute;
-      left:91.5px;
-      display:inline-block;
-      text-align:center;
-      width: 210px;
-   }
-   .bi-title {
-
-	color: black;
-	font-size: 30px;
-	font-weight: bolder;
-	z-index: 250;
-   }
-   a{
-   text-decoration: none;
-   }
-   
-   .me{
-   	position: relative;
-	display:inline-block;
-	margin-left: 264px;
-	text-align:center;
-	width: 40px;
-	height: 40px;
-   }
-     
-  /* footer_css */
-  
-  
-   .footer {
-    background-color: white;
-   	margin: 0 0;
-    width:393px; height:80px;
-   	position:absolute;
-   	top:780px;
-    z-index: 201;   
-    box-shadow: 0px -2px 4px lightgray; 
-   }
-   .footergroup {
-	position: relative;
-	width:393px; height:66px;
-	margin-top: 14px;
-   }
-   
-   
-   .map{
-	position: relative;
-	display: inline-block;
-	width: 40px;
-   	height: 40px;
-   	margin-left: 24px;
-   }
-   
-   .bi-map{
-   }
-   
-   .location{
-   	position: relative;
-	display: inline-block;
-	width: 40px;
-   	height: 40px;
-   	margin-left: 24px;
-   }
-   .bi-geo-alt-fill { 
-   }
-   
-   
-   .home{
-    position: absolute;
-    width: 80px;
-    height: 68px;
-    left: 156.5px;
-    top: -20px;
-    z-index: 250;
-    border-radius: 50%;
-    background-color: white;
-    text-align: center;
-	box-shadow: 0px 0px 4px gray;
-	padding-top: 12px;
-   }
-   .bi-house { 
-    font-size: 44px;
-   }
-   
-   .party{
-    display: inline-block;
-   	position:relative;
-   	width: 40px;
-   	height: 40px;
-   	margin-left: 127px;
-   }
-   
-   .bi-people-fill { 
-   }
-   
-   .pay{
-   	width: 40px;
-   	height: 40px;
-    display: inline-block;
-   	position:relative;
-   	margin-left: 24px;
-   }
-   .bi-qr-code { 
-   }
+	@import
+		url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css")
+		;
+	
+	body {
+		margin: 0 0;
+		line-height: normal;
+		font-family: "Pretendard Variable", Pretendard, -apple-system,
+			BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
+			"Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic",
+			"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+	}
+	
+	/* background_size=393*852px */
+	#back {
+		background-color: white;
+		width: 393px;
+		height: 852px;
+	}
+	
+	.header, .footer {
+		z-index: 250;
+	}
+	
+	i {
+		color: #0098ff;
+		font-size: 35px;
+		z-index: 250;
+	}
+	
+	/* header_css */
+	.header {
+		background-color: white;
+		width: 393px;
+		height: 100px;
+		position: absolute;
+		z-index: 200;
+		box-shadow: 0px 2px 4px lightgray;
+	}
+	
+	.headergroup {
+		position: relative;
+		width: 393px;
+		height: 50px;
+		top: 58px;
+	}
+	
+	.menu {
+		display: inline-block;
+		margin-left: 20px;
+		text-align: center;
+		width: 40px;
+		height: 40px;
+	}
+	
+	.bi-list {
+		
+	}
+	
+	.title {
+		position: absolute;
+		left: 91.5px;
+		display: inline-block;
+		text-align: center;
+		width: 210px;
+	}
+	
+	.bi-title {
+		color: black;
+		font-size: 30px;
+		font-weight: bolder;
+		z-index: 250;
+	}
+	
+	a {
+		text-decoration: none;
+	}
+	
+	.me {
+		position: relative;
+		display: inline-block;
+		margin-left: 264px;
+		text-align: center;
+		width: 40px;
+		height: 40px;
+	}
+	
+	/* footer_css */
+	.footer {
+		background-color: white;
+		margin: 0 0;
+		width: 393px;
+		height: 80px;
+		position: absolute;
+		top: 772px;
+		z-index: 201;
+		box-shadow: 0px -2px 4px lightgray;
+	}
+	
+	.footergroup {
+		position: relative;
+		width: 393px;
+		height: 66px;
+		margin-top: 12px;
+	}
+	
+	.map {
+		position: relative;
+		display: inline-block;
+		width: 40px;
+		height: 40px;
+		margin-left: 24px;
+	}
+	
+	.bi-map {
+		
+	}
+	
+	.location {
+		position: relative;
+		display: inline-block;
+		width: 40px;
+		height: 40px;
+		margin-left: 24px;
+	}
+	
+	.bi-geo-alt-fill {
+		
+	}
+	
+	.home {
+		position: absolute;
+		width: 80px;
+		height: 80px;
+		left: 156.5px;
+		top: -20px;
+		z-index: 250;
+		border-radius: 50%;
+		background-color: white;
+		text-align: center;
+		box-shadow: 0px 0px 4px gray;
+		padding: 0;
+	}
+	
+	.bi-house {
+		display: inline-block;
+		margin-top: 12px;
+		font-size: 44px;
+	}
+	
+	.party {
+		display: inline-block;
+		position: relative;
+		width: 40px;
+		height: 40px;
+		margin-left: 127px;
+	}
+	
+	.bi-people-fill {
+		
+	}
+	
+	.pay {
+		width: 40px;
+		height: 40px;
+		display: inline-block;
+		position: relative;
+		margin-left: 24px;
+	}
+	
+	.bi-qr-code {
+		
+	}
